mongo-example/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jenkins
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins
        ports:
        - containerPort: 8080
        
---
apiVersion: v1
kind: Service
metadata:
  namespace: jenkins
  name: jenkins-service
spec:
  selector:
    app: jenkins
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30003
  externalIPs:
    - 192.168.49.2
