mongo-example/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: mongo
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: nlb
#    service.beta.kubernetes.io/aws-load-balancer-name: ngnix-nlb
#    external-dns.alpha.kubernetes.io/hostname: k8s2.test.medirecords.com
  namespace: mongo
spec:
  selector:
    app: mongo-express
#  type: LoadBalancer
#  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
#      nodePort: 30003
