mongo-example/ngrok.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngrok
  labels:
    app: ngrok
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngrok
  template:
    metadata:
      labels:
        app: ngrok
    spec:
      containers:
      - name: ngrok
        image: wernight/ngrok
        command: [ "ngrok" ]
        args: [ "http", "nginx-service" ]
        ports:
        - containerPort: 4040

---
apiVersion: v1
kind: Service
metadata:
  name: ngrok-service
spec:
  selector:
    app: ngrok
#  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 4040
      targetPort: 4040

#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: nginx
#  annotations:
#    kubernetes.io/ingress.class: "nginx" # use the one that corresponds to your ingress controller.
#spec:
#  rules:
#    - host: nginx.test.medirecords.com
#      http:
#        paths:
#          - path: /*
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: nginx-service
#                port:
#                  number: 80
