mongo-example/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-bb53a7dc, subnet-1366b34b, subnet-fc31d5b5
  name: mongo-ingress
  namespace: mongo
spec:
  rules:
    - host: k8s.test.medirecords.com
      http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: mongo-express-service
              port:
                number: 80
#  rules:
#  - http:
#      paths:
#      - path: /*
#        pathType: ImplementationSpecific
#        backend:
#          service:
#            name: mongo-express-service
#            port:
#              number: 8081
